--- a/static/sass/Profile/Profile.sass
+++ b/static/sass/Profile/Profile.sass
@@ -4,6 +4,7 @@
 #app-body--profile
 	overflow-y: scroll
 	-webkit-overflow-scrolling: touch
+	background-color: rgb(44,11,53)
 
 .profile--wrapper
 	.profile-info--wrapper
@@ -147,6 +148,11 @@
 
 
 @media screen and (min-width: $desktop-min-width)
+	#app-body--profile
+		overflow-y: scroll
+		-webkit-overflow-scrolling: touch
+		background-color: rgba(0,0,0,0)
+
 	.profile--wrapper
 		.profile-info--wrapper
 			max-height: 6rem
